# osmilog

./: CLAUDE.md  Cargo.toml  README.md  RELEASING.md  Trunk.toml  build.rs  index.html
.github/workflows/: build-wasm.yaml  release.yaml
assets/osmilog_icons/: osmilog.icns
docs/: index.html  logisim.wasm  osmilog-168df21ae117e646.js  osmilog-19793a202a41dc8a.js  osmilog-3031ea92435674d5.js  osmilog-30e41fe72b925803.js  osmilog-3c05235d0832688b.js  osmilog-48cd5de0ec42b6f0.js  osmilog-48f20caaee478b20.js  osmilog-54a2b233cac65de4.js  osmilog-54aceafdc1e0adf.js  osmilog-5b843080ba408ccf.js  osmilog-7df5d0e992a4adcf.js  osmilog-816f5b6c9d10aa73.js  osmilog-87299dddece556d7.js  osmilog-8b136600d6097257.js  osmilog-971ac9c3250c3d37.js  osmilog-a8748e50363788b1.js  osmilog-ac35f68c67d7e2d3.js  osmilog-b4a5e6dc507161b2.js  osmilog-c0afde35f781b62c.js  osmilog-c5f8909044b70a55.js  osmilog-ca90f0067355b6db.js  osmilog-d2f599d2dd9c46d9.js  osmilog-d715cc16df9214b.js  osmilog-dfe63c5db3533aa0.js  osmilog-e1761a187bd57c30.js  osmilog-e60f3822ff0b6017.js  osmilog-f05b7f7c6b3266eb.js  osmilog-f3be68fb9869cc08.js  osmilog.wasm
src/: app.rs  circuit.rs  component.rs  components.rs  geometry.rs  gui.rs  io.rs  lib.rs  main.rs  net.rs  platform.rs  shape.rs  sim.rs  utils.rs  value.rs  wires.rs
src/gui/: app.rs  canvas_draw.rs  clipboard.rs  clock.rs  document.rs  geometry.rs  gui_command.rs  gui_undo.rs  history.rs  memory_editor.rs  placed_component.rs  properties.rs  shape.rs  theme.rs  utils.rs  wiring.rs
src/platform/: native.rs  web.rs
src/sim/: circuit.rs  command.rs  component.rs  net.rs  value.rs
src/sim/component/: adder.rs  comparator.rs  constant.rs  counter.rs  d_flip_flop.rs  demux.rs  divider.rs  encoder.rs  gate.rs  input.rs  jk_flip_flop.rs  multiplier.rs  mux.rs  ram.rs  reg.rs  rom.rs  shift_reg.rs  splitter.rs  sr_flip_flop.rs  subtractor.rs  t_flip_flop.rs
