[package]
name = "osmilog"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "osmilog"
path = "src/main.rs"

[dependencies]
egui    = "0.35.0"
eframe  = "0.35.0"
slotmap = "1.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document", "Element"] }
