[package]
name = "osmilog"
version = "0.2.0"
edition = "2021"

[lib]

[[bin]]
name = "osmilog"
path = "src/main.rs"

[dependencies]
egui       = "0.35.0"
eframe     = "0.35.0"
slotmap    = "1.1.1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rfd        = "0.15"

[dev-dependencies]
test-case = "3.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
